<resources>
    <string name="app_name">KMD</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="select_auth_method">Как получаем аудиозаписи?</string>
    <string name="methodsItemsUID">По id пользователя</string>
    <string name="methodsItemsGID">По id группы</string>
    <string name="methodsItemsLP">Через форму авторизации</string>
    <string name="methodsItemsOffline">Офлайн, из локальной базы</string>
    <string name="empty_field_warning">Необходимо ввести данные!</string>
    <string name="problems_with_get_music_list">Проблемы при получении списка аудиозаписей</string>
    <string name="download_selected_tracks">Скачать выбранные треки</string>
    <string name="play_failure">Ошибка при воспроизведении</string>
    <string name="you_in_the_head_playlist">Вы в начале списка!</string>
    <string name="you_in_the_end_playlist">Вы в конце списка!</string>
    <string name="problems_with_parsing_response">Что-то пошло не так...</string>
    <string name="selected">"Выбрано "</string>
    <string name="from">" из "</string>
    <string name="close">Закрыть</string>
    <string name="select_unselect_all">Выбрать все (отменить выбор)</string>
    <string name="download_selected">Скачать выбранные треки</string>
    <string name="delete_selected_from_cache">Удалить из кэша</string>
    <string name="select_all">Выбрать все</string>
    <string name="unselect_all">Отменить выбор</string>
    <string name="play_error">Возникла ошибка при воспроизведении</string>
    <string name="write_track_to_db_error">Ошибка при записи треков в БД!</string>
    <string name="download_error">Возникла ошибка при загрузке треков!</string>
    <string name="none_tracks_in_local_db">В локальной базе нет аудиозаписей</string>
    <string name="tracks_download_finished">Загрузка треков завершена</string>
    <string name="auto_enter">Входить автоматически</string>
    <string name="go">GO</string>
    <string name="is_downloaded">скачано</string>
    <string name="notification_download_text">Идет скачивание аудиозаписей</string>
    <string name="problems_with_auth">Проблемы при авторизации</string>
    <string name="sort_by_artist">Сортировка по исполнителю</string>
    <string name="sort_by_track_name">Сортировка по названию песни</string>
    <string name="visibility_all">Текущий плейлист</string>
    <string name="visibility_not_downloaded">Текущие: несохраненные</string>
    <string name="visibility_downloaded">Текущие: cохраненные</string>
    <string name="search_dialog_tittle">Поиск аудиозаписей</string>
    <string name="online_search">Онлайн поиск</string>
    <string name="search_by_track_name">По названию композиции</string>
    <string name="search_by_artist">По названию исполнителя</string>
    <string name="search_button">Поиск</string>
    <string name="generalDownloadProgressText">Скачано:</string>
    <string name="download_not_running">Служба загрузки не запущена!</string>
    <string name="loop_is_enabled">Режим повтора включен</string>
    <string name="loop_is_disabled">Режим повтора выключен</string>
    <string name="download_its_track">Скачать данный трек</string>
    <string name="random_mode">Режим случайного воспроизведения</string>
    <string name="random_mode_enabled">Включен режим случайного воспроизведения</string>
    <string name="random_mode_disabled">Режим случайного воспроизведения выключен</string>
    <string name="relogin_dialog_title">Войти под другой учетной записью?</string>
    <string name="string_not_is_id">Введенный ID должен состоять из цифр!</string>
    <string name="user_id_hint">ID пользователя</string>
    <string name="group_id_hint">ID группы</string>
    <string name="password_hint">Пароль</string>
    <string name="login_hint">Логин</string>
    <string name="downloadManager">Менеджер загрузок</string>
    <string name="settings">Настройки</string>
    <string name="about">О программе</string>
    <string name="no_tracks_for_download">Не найдено треков для загрузки!</string>
    <string name="settings_auto_open_saved">Открывать сохраненные</string>
    <string name="settings_auto_open_saved_summary">При открытии программы автоматически показывать сохраненные треки. Интернет соединение не требуется</string>
    <string name="settings_kmd_dir">Директория загрузок</string>
    <string name="settings_kmd_dir_summary">Директория на карте памяти, куда будут сохраняться загруженные треки. По-умолчанию: /sdcard/kmd</string>
    <string name="about_title">О приложении</string>
    <string name="about_current_version">Текущая версия</string>
    <string name="problems_with_internet">Проверьте соединение с сетью интернет</string>
    <string name="about_general_futures">Основные возможности</string>
    <string name="author_site">scorpio92.ru</string>
    <string name="about_short_info">KMD - Open Source приложение, предназначенное для прослушивания и скачивания аудиозаписей с сайта вконтакте\n\nАвтор: scorpio92</string>
    <string name="about_full_info">* Получение списка всех доступных (как и в официальном приложении) аудиозаписей по идентификатору пользователя (группы), по логину-паролю пользователя. Пароль НЕ сохраняется на устройстве и не передается третьим лицам.\n\n* Возможность прослушивания сохраненных аудиозаписей офлайн\n\n* Удобный менеджер загрузки, работающий в фоновом режиме\n\n* Прослушивание аудиозаписей в фоновом режиме\n\n* Добавление и удаление аудиозаписей (функционал доступен только при авторизации по логину-паролю)\n\n* Сортировка, поиск по аудиозаписям (офлайн и онлайн), изменение режима просмотра аудиозаписей (все текущие, текущие несохраненные, текущие сохраненные, все сохраненные)\n\n* Возможность проигрывания аудиозаписей в произвольном порядке, в режиме повтора</string>
    <string name="settings_auto_scan_saved">Автоматическое сканирование</string>
    <string name="settings_auto_scan_saved_summary">При выборе режима отображения аудиозаписей \"Текущие: сохраненные\", автоматически сканируется директория загрузок по-умолчанию. Если в ней есть аудиозаписи из списка аудиозаписей пользователя, информация о данных сохраненных аудиозаписях обновляется и аудиозапись помечается как скачанная. Внимание! Данную опцию не рекомендуется включать для постоянного использования</string>
    <string name="get_user_id_ok">Найден и добавлен пользователь с ID:</string>
    <string name="get_user_id_fail">Нету такого пользователя!</string>
    <string name="nothing_founded">Ничего не найдено!</string>
    <string name="visibility_all_downloaded">Все сохраненные</string>
    <string name="sd_permissions_warning">Без данных разрешений приложение работать не может!</string>
    <string name="add_this_track">Добавить к себе</string>
    <string name="track_was_added">Аудиозапись успешно добавлена</string>
    <string name="delete_this_track">Удалить из моих аудиозаписей</string>
    <string name="track_was_deleted">Аудиозапись успешно удалена</string>
    <string name="delete_from_my_audios">Удалить из моих аудиозаписей</string>
    <string name="captcha_needed">VK выпендривается и просит ввести символы с капчи!</string>
    <string name="circuralPlaying_mode">Режим кругового проигрывания</string>
    <string name="circuralPlaying_mode_enabled">Режим кругового воспроизведения включен</string>
    <string name="circuralPlaying_mode_disabled">Режим кругового воспроизведения выключен</string>
    <string name="exit_dialog_title">Вы хотите выйти?</string>
    <string name="settings_follow_on_play">Режим следования</string>
    <string name="settings_follow_on_play_summary">Текущий проигрываемый трек будет отображаться вверху списка</string>
    <string name="audio_service_error">Ошибка аудио сервиса. Запустите проигрывание повторно</string>
    <string name="help">Помощь</string>
    <string name="help_audio_get_method">О методах получения аудиозаписей</string>
    <string name="help_audio_get_method_summary"><b>Предусмотрены 4 способа получения аудиозаписей:</b>\n\n<b>* По идентификатору (ID) пользователя</b>\nНеобходимо ввести числовой идентификатор пользователя, его можно узнать, посмотрев на адрес своей страницы в ВК (например: https://vk.com/id<b>1234</b>).\nЕсли числовой идентификатор заменен на строковый (например: https://vk.com/<b>vkuser</b>), то в поле необходимо ввести строковый идентификатор (<b>vkuser</b> в  данном случае)\n\n<b>* По идентификатору (ID) группы</b>\nПринимается только числовой идентификатор (без минуса)\n\n<b>* С использованием пары логин-пароль</b>\nНеобходимо ввести свой логин и пароль от учетной записи в ВК. При таком способе получения аудиозаписей, пользователю становится доступна возможность добавлять (в свои) и удалять (из своих) аудиозаписи.\nВнимание! Данные которые вы вводите передаются только на сервер vk.com. Пароль на устройстве не сохраняется.\n\n<b>* Офлайн</b>\nВ данном случае отобразятся сохраненные на устройство аудиозаписи (если они имеются)\n\nПри получении аудиозаписей по идентификатору пользователя или группы, предусмотрена возможность автоматического получения аудиозаписей с использованием введенного ID при следующих входах в приложение. Для активации данной возможности установите галочку <b>Входить автоматически</b>\n\n</string>
</resources>
