<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:title="@string/settings_auto_open_saved"
        android:summary="@string/settings_auto_open_saved_summary"
        android:key="settings_auto_open_saved"
        android:defaultValue="true">
    </CheckBoxPreference>

    <CheckBoxPreference
        android:title="@string/settings_auto_scan_saved"
        android:summary="@string/settings_auto_scan_saved_summary"
        android:key="settings_auto_scan_saved"
        android:defaultValue="false">
    </CheckBoxPreference>

    <EditTextPreference
        android:title="@string/settings_kmd_dir"
        android:summary="@string/settings_kmd_dir_summary"
        android:key="settings_kmd_dir"
        android:defaultValue="kmd">
    </EditTextPreference>

    <CheckBoxPreference
        android:title="@string/settings_follow_on_play"
        android:summary="@string/settings_follow_on_play_summary"
        android:key="settings_follow_on_play"
        android:defaultValue="false">
    </CheckBoxPreference>

</PreferenceScreen>