<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="@string/about_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:padding="@dimen/paddingOtherAndOther" />

        <TextView
            android:text="@string/about_short_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:padding="@dimen/paddingOtherAndOther" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:text="@string/author_site"
            android:autoLink="web"
            android:paddingLeft="@dimen/paddingOtherAndOther"
            android:paddingStart="@dimen/paddingOtherAndOther"/>

        <TextView
            android:text="@string/about_general_futures"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:padding="@dimen/paddingOtherAndOther" />

        <TextView
            android:text="@string/about_full_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:padding="@dimen/paddingOtherAndOther" />

        <TextView
            android:text="@string/about_current_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/about_current_version"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:padding="@dimen/paddingOtherAndOther"/>

    </LinearLayout>

</ScrollView>