<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/searchInput" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/searchByGroup"
        android:layout_weight="1">

        <RadioButton
            android:text="@string/search_by_track_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/searchByTrackNameRadio"
            android:checked="true"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/search_by_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/searchByArtistRadio"
            android:layout_weight="1" />
    </RadioGroup>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/online_search"
        android:id="@+id/onlineSearch"/>

</LinearLayout>