<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    android:gravity="center_vertical|center_horizontal"
    android:paddingLeft="50dp"
    android:paddingRight="50dp">


    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:minHeight="0dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/select_auth_method"
            android:gravity="start"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:enabled="false"
            android:linksClickable="false"
            android:background="@android:color/transparent"
            android:paddingStart="8dp"
            android:paddingLeft="8dp" />

    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:paddingTop="@dimen/paddingTextViewAndOther">

        <Spinner
            android:id="@+id/method_selector"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:entries="@array/methodsItems"
            android:gravity="start"
            android:layout_weight="1"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginLeft="0dp"
            android:paddingStart="0dp"
            android:paddingEnd="0dp" />

    </TableRow>

    <TableRow
        android:id="@+id/uidTableRow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:paddingTop="@dimen/paddingOtherAndOther">

        <AutoCompleteTextView
            android:id="@+id/uid_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"/>

    </TableRow>

    <TableRow
        android:id="@+id/passwordTableRow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:paddingTop="@dimen/paddingOtherAndOther">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:paddingTop="@dimen/paddingOtherAndOther">

        <Button
            android:id="@+id/go_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:elevation="1dp"
            android:text="@string/go" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:paddingTop="@dimen/paddingOtherAndOther">

        <CheckBox
            android:id="@+id/autoEnter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/auto_enter"
            android:checked="false"/>

    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:gravity="center_vertical|center_horizontal"
        android:paddingTop="@dimen/paddingOtherAndOther">

        <ProgressBar
            android:id="@+id/auth_progress"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

    </TableRow>

</TableLayout>
